<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch.Vertical">

    <com.bkjk.kotlin.baselibrary.widgets.HeaderBar
        style="@style/MatchWrap"
        app:titleText="@string/mine_setting_text" />

    <TextView
        android:id="@+id/mUserProtocolTv"
        style="@style/SettingItemStyle"
        android:text="@string/mine_user_protocol_text" />

    <TextView
        android:id="@+id/mFeedBackTv"
        style="@style/SettingItemStyle"
        android:text="@string/mine_feedback_text" />

    <TextView
        android:id="@+id/mAboutTv"
        style="@style/SettingItemStyle"
        android:text="@string/mine_about_text" />

    <Button
        android:id="@+id/mLogoutBtn"
        style="@style/FullBtnStyle"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/mine_logout_text"
        android:enabled="true" />

</LinearLayout>